tests/NormalTests/paczka2/big_fuzzy/54828173.err
Error in line 4: OJjyfu A6 63,0
Error in line 14: OJjyfu A393 97,8
Error in line 33: MfYU A204 17,3
Error in line 30: 5W287Zhp A163 62,8
Error in line 57: QPU1CG A163 303,57
Error in line 56: QPU1CG A163 69,5
Error in line 75: JQcLqQJ2 A393 197,5
Error in line 59: QPU1CG A393 74,5
Error in line 67: MfYU A204 88,0
Error in line 84: QPU1CG A6 29,1
Error in line 95: QPU1CG A163 343,2
Error in line 103: MfYU A6 89,8
Error in line 105: JQcLqQJ2 A393 76,7
Error in line 108: JQcLqQJ2 A163 10,4
Error in line 111: JQcLqQJ2 A6 19,4
Error in line 121: CAVHA1aMMl A204 47,8
Error in line 143: CAVHAwaMMl Aw63 54,7
Error in line 148: CAVHA1aMMl A163 223,7
Error in line 154: A393 A393 65,0
Error in line 165: 5W287Zhp A204 47,1
Error in line 175: 5W87Zhp A04 61,5
Error in line 178: A393 A393 0,5
Error in line 180: 5W287Zhp A204 201,7
Error in line 198: OJjyfu A393 85,9
Error in line 199: A393 A6 78,1
Error in line 206: OJjyfu A163 71,8
Error in line 207: A393 A163 28,5
Error in line 212: A393 A204 0,4
Error in line 221: MfYU A6 88,3
Error in line 224: MfYU A393 9,6
Error in line 217: QPU1CG A393 13,1
Error in line 234: QPU1CG A204 73,3
Error in line 236: QPU1CG A163 39,5
Error in line 241: QPU1CG A204 98,7
Error in line 240: A393 A204 3,2
